fix: make list of tasks mutable for sorting