@@ -13,6 +13,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.math.BigDecimal;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 public abstract class TaremaScheduler extends Scheduler {
@@ -70,7 +71,7 @@ public abstract class TaremaScheduler extends Scheduler {
                     return tasks;
                 })
                 .flatMap(Collection::stream)
-                .toList();
+                .collect(Collectors.toList());
 
         rankMaxPrioritize.sortTasks(prioritizedTasks);
         unscheduledTasks.removeAll(prioritizedTasks);
